--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
     "author": "Denis Churbanov",
     "license": "MIT",
     "scripts": {
-        "start": "NODE_ENV=development webpack serve",
-        "build": "NODE_ENV=production webpack -p"
+        "start": "cross-env NODE_ENV=development webpack serve",
+        "build": "cross-env NODE_ENV=production webpack -p"
     },
     "devDependencies": {
         "@babel/plugin-transform-typescript": "^7.16.8",
@@ -17,6 +17,7 @@
         "autoprefixer": "^10.4.2",
         "babel-loader": "^8.2.3",
         "candy-loader": "^0.1.5",
+        "cross-env": "^7.0.3",
         "file-loader": "^6.2.0",
         "html-webpack-plugin": "^5.5.0",
         "prettier": "^2.5.1",
